--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,93 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Details" android:background="@color/PrimaryBg">
+    android:background="@color/PrimaryBg"
+    android:gravity="center"
+    tools:context=".Details" android:orientation="vertical">
 
-
-    <GridLayout
+    <LinearLayout android:id="@+id/layout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:columnCount="2">
+        android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="top">
 
         <TextView
-            android:text="Edit Bill Details"
-            android:gravity="center_horizontal"
-            android:layout_gravity="fill_horizontal|center_vertical"
-            android:layout_columnSpan="2"
-            android:layout_width="5dp"
-            android:textSize="24dp"
+            android:id="@+id/tvHeading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Bill Details"
             android:textColor="@color/TextStyleHeader"
-            android:layout_below="@id/billcontent"
-            />
+            android:textSize="24dp" />
+    </LinearLayout>
+
+    <LinearLayout android:id="@+id/layout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal" android:layout_below="@+id/layout1">
 
         <EditText
             android:id="@+id/billcontent"
-            android:layout_gravity="fill_horizontal"
-            android:hint="@string/EditBillContext"
-            android:textColor="@color/TextStyle1"
-            android:layout_width="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_edit_black_30dp"
+            android:hint="@string/EditBillContext"
             android:paddingTop="15dp"
-            android:layout_columnSpan="2"
-            android:layout_below="@id/billdate"/>
+            android:textColor="@color/TextStyle1" />
+    </LinearLayout>
 
-
-        <!--<DatePicker android:id="@+id/datepicker"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-
-        <!--&gt;</DatePicker>-->
+    <LinearLayout android:id="@+id/layout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal" android:layout_below="@id/layout2">
 
         <EditText
             android:id="@+id/billdate"
-            android:layout_gravity="fill_horizontal"
-            android:hint="@string/EditBillDate"
-            android:textColor="@color/TextStyle1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_date_range_black_30dp"
+            android:hint="@string/EditBillDate"
             android:onClick="dateSelect"
-            android:layout_width="5dp"
-            android:paddingTop="20dp"
-            android:layout_below="@id/billamount"/>
+            android:paddingTop="15dp"
+            android:textColor="@color/TextStyle1" />
+    </LinearLayout>
 
 
-
+    <LinearLayout android:id="@+id/layout4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal" android:layout_below="@+id/layout3">
 
         <EditText
             android:id="@+id/billamount"
-            android:layout_gravity="fill_horizontal"
-            android:hint="Bill Amount"
-            android:textColor="@color/TextStyle1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_attach_money_black_30_24dp"
+            android:hint="Bill Amount"
             android:onClick="dateSelect"
-            android:layout_width="5dp"
-            android:paddingTop="20dp"
-            android:layout_below="@id/submit"/>
+            android:paddingTop="15dp"
+            android:textColor="@color/TextStyle1"
+
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="30dp" android:layout_below="@+id/layout4">
 
         <Button
             android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:layout_marginTop="120dp"
-            android:layout_alignParentBottom="true"
-            android:adjustViewBounds="false"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_gravity="bottom|center"
-            android:textSize="25sp"
-            android:text="@string/EditBillNextButton"
-            android:textColor="@color/TextStyle1"
             android:drawableLeft="@drawable/ic_save_black_24dp"
-            />
-
-    </GridLayout>
-
+            android:text="SAVE"
+            android:textColor="#6B6D6E"
+            android:textSize="25sp" />
+    </LinearLayout>
     <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true">-->
-        <!--<include layout="@layout/appbar"/>-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true">-->
+    <!--<include layout="@layout/appbar"/>-->
 
     <!--</RelativeLayout>-->
     <fragment
@@ -98,9 +98,7 @@
         android:name="com.google.android.gms.samples.vision.ocrreader.ToolbarFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-
-
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
