--- a/app/src/main/res/layout/fragment_toolbar.xml
+++ b/app/src/main/res/layout/fragment_toolbar.xml
@@ -32,6 +32,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/ivedit"
                         android:layout_width="0dp"
                         android:layout_height="match_parent" android:layout_weight="25"
                         android:src="@drawable/ic_dashboard_black_40dp_70" android:clickable="true"/>
@@ -43,13 +44,14 @@
                         android:src="@drawable/ic_home_black_40dp_70" android:clickable="true"/>
 
                     <ImageView
+                        android:id="@+id/ivcam"
                         android:layout_width="0dp"
                         android:layout_height="match_parent" android:layout_weight="25"
                         android:src="@drawable/ic_photo_camera_black_40dp_70" android:clickable="true"/>
 
 
                     <ImageView
-                        android:id="@+id/ivcam"
+                        android:id="@+id/ivadd"
                         android:layout_width="0dp"
                         android:layout_height="match_parent" android:layout_weight="25"
                         android:src="@drawable/ic_add_circle_black_40dp_70" android:clickable="true"/>
