--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -75,12 +75,12 @@
 
     <!--</RelativeLayout>-->
 
-    <fragment
-        android:id="@+id/toolbar_fragment"
-        android:name="com.google.android.gms.samples.vision.ocrreader.ToolbarFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+    <!--<fragment-->
+        <!--android:id="@+id/toolbar_fragment"-->
+        <!--android:name="com.google.android.gms.samples.vision.ocrreader.ToolbarFragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"/>-->
 
 
 
