Fixed camera crash issue

--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">
 
     <TextView
@@ -10,7 +11,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/status_message"
         android:layout_below="@+id/read_text"
-        android:layout_marginTop="20dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:layout_above="@+id/text_value"
+        android:layout_marginBottom="10dp"/>
 
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
@@ -23,17 +28,16 @@
     <!--android:layout_alignParentEnd="false"-->
     <!--android:layout_centerHorizontal="true" />-->
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-        <!--android:id="@+id/text_value"-->
-        <!--android:layout_below="@+id/status_message"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:layout_alignRight="@+id/status_message"-->
-        <!--android:layout_alignEnd="@+id/status_message" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/text_value"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20dp" />
 
 
 
@@ -42,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="@string/read_text"
         android:id="@+id/read_text"
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Switch
@@ -50,8 +54,8 @@
         android:layout_height="wrap_content"
         android:text="@string/auto_focus"
         android:id="@+id/auto_focus"
-        android:layout_above="@+id/toolbar"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="77dp"
         android:checked="true" />
 
@@ -60,9 +64,8 @@
         android:layout_height="wrap_content"
         android:text="@string/use_flash"
         android:id="@+id/use_flash"
-        android:layout_alignTop="@+id/toolbar_fragment"
-        android:layout_alignRight="@id/auto_focus"
-        android:layout_alignEnd="@+id/text_value"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="77dp"
         android:checked="false" />
 
