--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -5,69 +5,54 @@
     android:background="@color/black"
     tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">
 
-    <TextView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/status_message"
-        android:layout_below="@+id/read_text"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_above="@+id/text_value"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true">
 
-    <!--<TextView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-    <!--android:text="@string/ocr_header"-->
-    <!--android:id="@+id/status_message"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_alignParentEnd="false"-->
-    <!--android:layout_centerHorizontal="true" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:layout_marginTop="50dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/text_value"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="20dp" />
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/auto_focus"
+                android:id="@+id/auto_focus"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:checked="true"
+                android:layout_weight="1"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/read_text"
+                android:id="@+id/read_text"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"/>
+
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/use_flash"
+                android:id="@+id/use_flash"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:checked="false"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/read_text"
-        android:id="@+id/read_text"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/auto_focus"
-        android:id="@+id/auto_focus"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="77dp"
-        android:checked="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/use_flash"
-        android:id="@+id/use_flash"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="77dp"
-        android:checked="false" />
 
     <!--<RelativeLayout-->
         <!--android:id="@+id/toolbar"-->
