--- a/app/src/main/res/layout/table_row.xml
+++ b/app/src/main/res/layout/table_row.xml
@@ -35,7 +35,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="20sp"
-              android:textColor="#707275"
+              android:textColor="#f7f7f7"
               android:textStyle="bold"/>
         </LinearLayout>
 
