--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">
+    tools:context="com.rahul.android.payment.MainActivity">
 
 
 
@@ -65,7 +65,7 @@
 
     <!--<fragment-->
         <!--android:id="@+id/toolbar_fragment"-->
-        <!--android:name="com.google.android.gms.samples.vision.ocrreader.ToolbarFragment"-->
+        <!--android:name="com.rahul.android.payment.ToolbarFragment"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_alignParentBottom="true"/>-->
