--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -109,7 +109,7 @@
 
     <!--<fragment-->
         <!--android:id="@+id/toolbar_fragment"-->
-        <!--android:name="com.google.android.gms.samples.vision.ocrreader.ToolbarFragment"-->
+        <!--android:name="com.rahul.android.payment.ToolbarFragment"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_alignParentBottom="true"-->
